restructure of files and folders

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graph-width-visualizer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint public/js/td.js",
