--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "dependencies": {
     "ejs": "^3.0.2",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "express-fileupload": "^1.1.7-alpha.3",
     "fs": "0.0.1-security",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.4"
   }
 }
