--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1"
   },
   "dependencies": {
+    "@rauschma/stringio": "^1.4.0",
     "ejs": "^3.0.2",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
@@ -30,6 +31,7 @@
     "fs": "0.0.1-security",
     "jeezy": "^1.13.1",
     "nodemon": "^2.0.3",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "util": "^0.12.2"
   }
 }
