--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "express-fileupload": "^1.1.7-alpha.3",
     "fs": "0.0.1-security",
+    "intro.js": "^2.9.3",
     "jeezy": "^1.13.1",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.4",
