--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graph-width-visualizer",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
