--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.itu.dk/fgjo/tree-decomp.git"
+    "url": "https://github.com/FrederikJorgensen/graph-width-visualizer.git"
   },
   "keywords": [],
   "author": "",
