--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@rauschma/stringio": "^1.4.0",
     "express": "^4.17.1",
+    "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
