--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "eslint-plugin-import": "^2.20.1"
   },
   "dependencies": {
     "@rauschma/stringio": "^1.4.0",
