--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graph-width-visualizer",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,14 +26,10 @@
     "express": "^4.17.1",
     "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.3",
     "express-fileupload": "^1.1.7-alpha.3",
     "fs": "0.0.1-security",
     "intro.js": "^2.9.3",
-    "jeezy": "^1.13.1",
     "nodemon": "^2.0.3",
-    "prettier": "^2.0.4",
     "util": "^0.12.2"
   }
 }
