--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@rauschma/stringio": "^1.4.0",
     "body-parser": "^1.19.0",
+    "d3-context-menu": "^1.1.2",
+    "deepcopy": "^2.0.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
