--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": "^2.20.2"
   },
   "dependencies": {
+    "@jsbits/deep-clone": "^1.1.1",
     "@rauschma/stringio": "^1.4.0",
     "body-parser": "^1.19.0",
     "d3-context-menu": "^1.1.2",
@@ -31,6 +32,7 @@
     "express-fileupload": "^1.1.7-alpha.3",
     "fs": "0.0.1-security",
     "intro.js": "^2.9.3",
+    "lodash.clonedeep": "^4.5.0",
     "nodemon": "^2.0.3",
     "util": "^0.12.3"
   }
