--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node src/app.js",
     "lint": "npx eslint public/js/td.js",
-    "dev": "nodemon app",
-    "build": "parcel build public/index.html"
+    "dev": "nodemon src/app.js",
+    "build": "parcel build public/index.html --public-url ./"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/polyfill": "^7.10.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -25,7 +26,6 @@
   },
   "dependencies": {
     "@jsbits/deep-clone": "^1.1.1",
-    "@rauschma/stringio": "^1.4.0",
     "body-parser": "^1.19.0",
     "d3-context-menu": "^1.1.2",
     "deepcopy": "^2.0.0",
@@ -34,10 +34,7 @@
     "express-fileupload": "^1.1.7-alpha.3",
     "fs": "0.0.1-security",
     "g": "^2.0.1",
-    "gulp-cli": "^2.3.0",
-    "intro.js": "^2.9.3",
-    "lodash.clonedeep": "^4.5.0",
     "nodemon": "^2.0.3",
-    "util": "^0.12.3"
+    "regenerator-runtime": "^0.13.5"
   }
 }
