--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "start": "node src/app.js",
     "lint": "npx eslint public/js/td.js",
-    "dev": "node src/app.js",
-    "build": "parcel build public/index.html --public-url ./"
+    "dev": "node src/app.js"
   },
   "repository": {
     "type": "git",
