--- a/package.json
+++ b/package.json
@@ -6,12 +6,28 @@
     "type": "git",
     "url": "https://github.com/FrederikJorgensen/graph-width.git"
   },
+  "scripts": {
+    "start": "lite-server",
+    "test": "jest"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-typescript": "^7.15.0",
+    "@swc/cli": "^0.1.49",
+    "@swc/core": "^1.2.84",
+    "babel-jest": "^27.1.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "jest": "^26.6.3",
+    "lite-server": "^2.6.1",
+    "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "@types/jest": "^27.0.1"
   }
 }
